# devops-control-tower

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_HANDOFF.md  README.md  SECURITY.md  STAGE-01-SUMMARY.md  STAGE2  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md
.github/workflows/: ci.yml
dashboard/: package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/reviews/: page.tsx
dashboard/src/app/reviews/[id]/: page.tsx
devops_control_tower/: __init__.py  api.py  auth.py  config.py  gpt_openapi.py  main.py  mcp.py
devops_control_tower/agents/: __init__.py  base.py
devops_control_tower/agents/implementations/: __init__.py  infrastructure_monitor.py
devops_control_tower/cli/: __init__.py
devops_control_tower/core/: __init__.py  enhanced_orchestrator.py  orchestrator.py
devops_control_tower/cwom/: __init__.py  artifact.py  constraint_snapshot.py  context_packet.py  doctrine_ref.py  enums.py  evidence_pack.py  issue.py  primitives.py  repo.py  review_decision.py  routes.py  run.py  services.py  task_adapter.py
devops_control_tower/data/: __init__.py
devops_control_tower/data/models/: __init__.py  events.py  workflows.py
devops_control_tower/db/: __init__.py  audit_models.py  audit_service.py  base.py  cwom_models.py  models.py  services.py
devops_control_tower/db/migrations/: env.py  script.py.mako
devops_control_tower/db/migrations/versions/: 001_create_core_tables.py  a1b2c3d4e5f6_create_core_tables.py  b2f6a732d137_create_task_table.py  c3e8f9a21b4d_create_cwom_tables.py  d4a9b8c2e5f6_add_cwom_issue_id_to_tasks.py  e5f6a7b8c9d0_sprint0_trace_id_and_artifacts.py  f7a8b9c0d1e2_create_audit_log.py  g8b9c0d1e2f3_add_fk_tasks_cwom_issue.py  h9c0d1e2f3a4_add_artifact_root_uri_to_runs.py  i0d1e2f3a4b5_add_evidence_pack_table.py  j1e2f3a4b5c6_add_review_decision_table.py
devops_control_tower/integrations/: __init__.py  jules_dev_kit.py
devops_control_tower/policy/: __init__.py  task_gate.py
devops_control_tower/schemas/: task_v1.py
devops_control_tower/worker/: __init__.py  __main__.py  action_runner.py  executor.py  loop.py  pipeline.py  prover.py  storage.py  worker.py
docs/: CLAUDE-CODE-EXECUTOR-ROADMAP.md  DEFERRED.md  JCT-MCP-EXECUTOR-TEST-PLAN.md  JCT-MCP-SERVER-DESIGN.md  chatgpt-custom-gpt-setup.md  gpt-actions-instructions.md
docs/cwom/: CWOM-COMPLETION-ROADMAP.md  CWOM-DELIVERABLE-CHECKLIST.md  CWOM-IMPLEMENTATION-PLAN.md  auditlog.md  cwom-spec-v0.1.md  cwom_description.md  cwom_roadmap.md  cwom_v0_1.txt
docs/examples/: task-create-v1.json
docs/specs/: task-spec-v1.md
docs/specs/examples/: task-create-v1.json
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: test_intake.sh  test_prove.sh  test_review.sh  test_worker.sh  verify_db_fresh.sh
sprints/: sprint-0.md
tests/: __init__.py  conftest.py  test_api_tasks.py  test_audit_log.py  test_contract_snapshot.py  test_cwom_api.py  test_cwom_contract.py  test_cwom_crud_integration.py  test_cwom_db_models.py  test_events.py  test_gpt_actions.py  test_main.py  test_mcp_server.py  test_mcp_sse.py  test_orchestrator.py  test_policy.py  test_review.py  test_review_api.py  test_sprint0.py  test_task_cwom_integration.py
